--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,35 +20,45 @@
       labelPlacement="floating"
       fill="outline"
     ></ion-textarea>
-      <ion-item>
-        <ion-fab-button (click)="speak(textarea)">
-          <ion-icon name="play"></ion-icon>
-        </ion-fab-button>
-        
-        <ion-fab-button (click)="stop()" color="danger">
-          <ion-icon name="stop" ></ion-icon>
-        </ion-fab-button>
-
-        <ion-fab-button (click)="clear(textarea)" color="warning">
-          <ion-icon name="trash"></ion-icon>
-        </ion-fab-button>
-      </ion-item>
+      <ion-grid>
+        <ion-row>
+          <ion-col  size="3">
+            <ion-fab-button (click)="speak(+taxa, +tom,textarea)">
+            <ion-icon name="play"></ion-icon>
+          </ion-fab-button></ion-col>
+          <ion-col  size="3">
+            <ion-fab-button (click)="stop()" color="danger">
+              <ion-icon name="stop" ></ion-icon>
+            </ion-fab-button>
+          </ion-col>
+          <ion-col  size="3">
+            <ion-fab-button (click)="clear(textarea)" color="warning">
+              <ion-icon name="trash"></ion-icon>
+            </ion-fab-button>
+          </ion-col>
+          <ion-col  size="3">
+            <ion-fab-button (click)="speakStart(textarea)">
+              Por fala
+            </ion-fab-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
       <ion-item>
         <label>Taxa</label>
-        <ion-range
+        <ion-range #taxa
           min="0.0" max="4.0"
           pin="true"
           color="primary"
-          (ionChange)="taxaChange($event)">
+          (ionChange)="taxaChange(+taxa, $event)">
         </ion-range>
       </ion-item>
       <ion-item>
         <label>Tom</label>
-        <ion-range
+        <ion-range #tom
           min="0.0" max="2.0"
           pin="true"
           color="success"
-          (ionChange)="tomChange($event)">
+          (ionChange)="tomChange(+tom, $event)">
         </ion-range>
       </ion-item>
   </div>
@@ -56,7 +66,7 @@
 
 <ion-footer>
   <ion-header>
-    <ion-toolbar  class="ion-text-center" color="secondary"> 
+    <ion-toolbar  class="ion-text-center" color="secondary">
       <ion-title>Footer</ion-title>
     </ion-toolbar>
   </ion-header>
